@@ -1,4 +1,5 @@
 ### 2023.01.15
 - Moved bash script files into /utils
 - Added User/Custom SPL token support. 
-- Custom SPL token Symbol is appended to existing available currencies list
+- Custom SPL token Symbol and Name is appended to existing available currencies list
+- Now Validating transactions using User supplied RPC
